--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ body {
 .respuesta {
   padding: 10px;
   background-color: rgba(255, 255, 255, 0);
+  font-size: 20px;
 }
 
 .respuesta-incorrecta {
@@ -74,4 +75,7 @@ body {
 }
 .wraper {
   text-align: justify;
+}
+
+.simple-menu {
 }
